# buvis-pybase

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  adapters.html  configuration.html  filesystem.html  formatting.html  genindex.html  index.html  mise.toml  objects.inv  pyproject.toml  renovate.json  search.html  searchindex.js
.claude/: commands
.doctrees/: adapters.doctree  configuration.doctree  environment.pickle  filesystem.doctree  formatting.doctree  index.doctree
.github/workflows/: build-pre-release-pypi-package.yml  build-pypi-package.yml  build-release-pypi-package.yml  deploy-docs.yml  release.yml  test.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: PRD-00001-pydantic-settings-base-models.md  PRD-00002-yaml-file-discovery.md  PRD-00003-yaml-loading-with-env-substitution.md  PRD-00004-env-variable-naming-convention.md  PRD-00005-nested-env-variables-double-underscore.md  PRD-00006-complex-env-value-parsing.md  PRD-00007-configuration-precedence-system.md  PRD-00008-configuration-resolver.md  PRD-00009-click-cli-integration.md  complexity-report.json
.taskmaster/tasks/: tasks.json
dev/: bump  bump-major  bump-minor  bump-patch  tbump-major  tbump-minor  tbump-patch
dev/docs/: versioning.md
docs/source/: adapters.rst  conf.py  configuration.rst  filesystem.rst  formatting.rst  index.rst
tests/adapters/: test_capturing_rich_handler.py  test_jira_adapter.py  test_jira_domain.py  test_jira_exceptions.py  test_jira_settings.py  test_outlook_exceptions.py  test_uv_adapter.py  (+3 more)
(+68 files in other folders)
