[tool.poetry]
name = "buvis-pybase"
version = "0.1.4-alpha.1"
description = "Foundation of BUVIS python projects"
authors = ["Tomáš Bouška <tomas@buvis.net>"]
license = "MIT License"
readme = "README.md"
packages = [
  { include = "buvis", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
inflection = "0.5.1"
pywin32 = {version = "306", platform = "win32"}
rich = "13.8.1"
tzlocal = "5.2"
pyyaml = "6.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"

[tool.poetry.group.docs.dependencies]
sphinx = "8.0.2"
sphinx-rtd-theme = "3.0.0rc1"


[tool.poetry.group.tests.dependencies]
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
